Supports build on Java 17